--- a/src/core/imports.css
+++ b/src/core/imports.css
@@ -1,1 +1,2 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
